# wb_api

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.backend  README.md  docker-compose.yml  service.yml
src/backend/: .pre-commit-config.yaml  pyproject.toml  scripts.sh  setup.cfg
src/backend/apps/: __init__.py
src/backend/apps/apis/base/: helpers.py  statistics_api.py  suppliers_api.py  transport.py
src/backend/apps/consumer/: apps.py  worker.py
src/backend/apps/consumer/management/commands/: run_worker.py
src/backend/apps/core/: admin.py  admin_action.py  apps.py  models.py  serializers.py  urls.py  views.py
src/backend/apps/core/migrations/: 0001_initial.py  0002_auto_20240703_1650.py  0003_auto_20240703_1711.py
src/backend/apps/core/services/: sales_report.py
src/backend/project/: urls.py
src/backend/settings/: __init__.py  common.py  logging.py
